8234076: JVM crashes on Windows 10 using --module=NAME

Reviewed-by: ksrini, henryjen